--- a/style.css
+++ b/style.css
@@ -1,41 +1,107 @@
 .main_class {
-    width: 100%;
-    height: 100%;
-    align-items: center;
+    margin: 10% auto;
+    width: 900px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
 }
 
 .menu_vertical_bar {
-    position: absolute;
-    top: 15%;
-    left: 200px;
-}
-
-.vl {
-    border-left: 6px solid rgb(70, 249, 255);
-    height: 490px;
-    position: absolute;
-    left: 38px;
-    margin-left: -3px;
+    padding: 10px;
 }
 
 .menu_items_list {
     list-style-type: none;
-    width: 150px;
-    position: absolute;
-    top: 30px;
-}
-
-.vl_end {
-    border-left: 6px solid rgb(70, 249, 255);
-    height: 600px;
-    position: absolute;
-    left: 188px;
-    margin-left: -3px;
-    top: 17px;
+    width: 250px;
 }
 
 li {
-    padding: 30px;
+    padding: 20px;
     background-color: aqua;
     border-bottom: 1px solid rgb(0, 0, 0);
+    text-align: center;
+}
+
+.profile {
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-card {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+    background-color: white;
+    border-radius: 1rem;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.6);
+}
+
+.profile-image {
+    position: relative;
+    top: -60px;
+    border-radius: 1rem;
+    background-image: url(photos/myphoto.jpg);
+    width: 11rem;
+    height: 11rem;
+    background-position: center;
+    background-size: cover;
+    box-shadow: 0px 5px 50px 0px rgb(7 116 1), 0px 0px 0px 7px rgb(0 46 9 / 50%);
+}
+
+.profile-info {
+    text-align: center;
+    margin-top: -3rem;
+    margin-bottom: 1rem;
+}
+
+.profile-info>.profile-name {
+    color: #212121;
+}
+
+.profile-info>.profile-desc {
+    color: #666666;
+    font-size: 0.9rem;
+}
+
+.fa {
+    padding: 10px;
+    font-size: 20px;
+    width: 20px;
+    text-align: center;
+    text-decoration: none;
+    border-radius: 50%;
+    margin-left: 15px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
 }
