--- a/nav_bar.css
+++ b/nav_bar.css
@@ -1,3 +1,8 @@
+.nvbar{
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+}
 #ul_navbar {
     position: relative;
     list-style-type: none;
@@ -44,7 +49,7 @@
     font-weight: bold;
 }
 
-.navbar-nav>.active>a {
+.navbar-nv>.active>a {
     background-image: linear-gradient(rgb(105, 105, 105), rgb(247, 255, 244), rgb(135, 136, 135));
     color: black!important;
     font-weight: bold;
