--- a/home/style.css
+++ b/home/style.css
@@ -1,17 +1,24 @@
 /* hero background image */
+
 .bgimage {
-    height:100vh;
-    background: url('images/heroImage.jpeg');
-    background-size:cover;
-    position:relative;
+    height: 100vh;
+    background: url('images/2966551.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: relative;
 }
+
+
 /* text css above hero image*/
+
 .hero_title {
     font-size: 4.5rem;
 }
+
 .hero_desc {
     font-size: 2rem;
 }
+
 .hero-text {
     text-align: center;
     position: absolute;
@@ -21,27 +28,35 @@
     color: white;
 }
 
+
 /* about section image css */
+
 .imageAboutPage {
     width: 100%;
 }
 
+
 /* services section css */
+
 .servicesText.card {
     height: 280px;
     cursor: pointer;
-  }
+}
+
 .servicesIcon {
     font-size: 36px;
     text-align: center;
     width: 100%;
 }
+
 .card-title {
     text-align: center;
 }
+
 .card:hover .servicesIcon {
     color: #008000;
 }
+
 .servicesText:hover {
     border: 1px solid #008000;
 }
