--- a/nav_bar.css
+++ b/nav_bar.css
@@ -1,56 +1,25 @@
-.nvbar{
-    position: fixed;
-    z-index: 1;
-    width: 100%;
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
 }
-#ul_navbar {
-    position: relative;
+
+#li-itm {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-#li_left {
-    float: right;
-}
-
-#li_left a {
-    display: block;
-    color: white;
+    display: inline-block;
+    width: 100px;
+    height: 40px;
+    padding-top: 5px;
     text-align: center;
-    padding: 14px 26px;
+}
+
+#under_line {
     text-decoration: none;
-    font-weight: bold;
-    transition: 0.5s;
 }
 
-#li_left a:hover {
-    background-image: linear-gradient(rgb(105, 105, 105), rgb(247, 255, 244), rgb(135, 136, 135));
-    color: black;
-    transform: scale(1.3);
+#li-itm:hover {
+    background-color: rgba(50, 255, 255, 0.719);
 }
 
-#li_logo {
-    position: absolute;
-    float: left;
-    font-size: 38px;
-    padding-top: 0px;
-    padding-left: 8px;
-    margin-top: 0px;
-}
-
-#li_logo a {
-    display: block;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.navbar-nv>.active>a {
-    background-image: linear-gradient(rgb(105, 105, 105), rgb(247, 255, 244), rgb(135, 136, 135));
-    color: black!important;
-    font-weight: bold;
+.active {
+    background-color: rgb(0, 255, 255);
 }
