--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -240,7 +240,7 @@ h6 {
 
 #hero:before {
   content: "";
-  background: rgba(5, 13, 24, 0.226);
+  background: rgba(5, 13, 24, 0.164);
   position: absolute;
   bottom: 0;
   top: 0;
@@ -931,18 +931,18 @@ section {
   color: #fff;
 }
 
-.contact .php-email-form {
+.contact .node-email-form {
   width: 100%;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
 }
 
-.contact .php-email-form .form-group {
+.contact .node-email-form .form-group {
   padding-bottom: 8px;
 }
 
-.contact .php-email-form .validate {
+.contact .node-email-form .validate {
   display: none;
   color: red;
   margin: 0 0 15px 0;
@@ -950,7 +950,7 @@ section {
   font-size: 13px;
 }
 
-.contact .php-email-form .error-message {
+.contact .node-email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -959,11 +959,11 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br+br {
+.contact .node-email-form .error-message br+br {
   margin-top: 25px;
 }
 
-.contact .php-email-form .sent-message {
+.contact .node-email-form .sent-message {
   display: none;
   color: #fff;
   background: #18d26e;
@@ -972,14 +972,14 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .loading {
+.contact .node-email-form .loading {
   display: none;
   background: #fff;
   text-align: center;
   padding: 15px;
 }
 
-.contact .php-email-form .loading:before {
+.contact .node-email-form .loading:before {
   content: "";
   display: inline-block;
   border-radius: 50%;
@@ -991,30 +991,30 @@ section {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form .form-group {
+.contact .node-email-form .form-group {
   margin-bottom: 15px;
 }
 
-.contact .php-email-form label {
+.contact .node-email-form label {
   padding-bottom: 8px;
 }
 
-.contact .php-email-form input,
-.contact .php-email-form textarea {
+.contact .node-email-form input,
+.contact .node-email-form textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
 }
 
-.contact .php-email-form input {
+.contact .node-email-form input {
   height: 44px;
 }
 
-.contact .php-email-form textarea {
+.contact .node-email-form textarea {
   padding: 10px 15px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .node-email-form button[type=submit] {
   background: #149ddd;
   border: 0;
   padding: 10px 24px;
@@ -1023,7 +1023,7 @@ section {
   border-radius: 4px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .node-email-form button[type=submit]:hover {
   background: #37b3ed;
 }
 
